tests/arrays/arrays.exp
Error --------------------------------------------------------------------------------------------------- Arrays.js:10:5

Cannot call `foo` with `a[1]` bound to `x` because number [1] is incompatible with string [2].

   Arrays.js:10:5
   10| foo(a[1]);
           ^^^^

References:
   Arrays.js:7:8
    7| a[0] = 1;
              ^ [1]
   Arrays.js:4:16
    4| function foo(x:string) { }
                      ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- numeric_elem.js:6:1

Cannot assign `0` to `arr[day]` because `Date` [1] is not an array index.

   numeric_elem.js:6:1
   6| arr[day] = 0;
      ^^^^^^^^

References:
   numeric_elem.js:2:11
   2| var day = new Date;
                ^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- numeric_elem.js:7:2

Cannot get `arr[day]` because `Date` [1] is not an array index.

   numeric_elem.js:7:2
   7| (arr[day]: string); // error: number ~> string
       ^^^^^^^^

References:
   numeric_elem.js:2:11
   2| var day = new Date;
                ^^^^^^^^ [1]



Found 3 errors
